--- a/ChromeRiverFAQ.html
+++ b/ChromeRiverFAQ.html
@@ -178,7 +178,7 @@ th {
   <h3 style="font-family:Benton Sans";>How does accumulated mileage work?</h3>
   <p style="font-family:Benton Sans;">Chrome River has a tile titled under ‘Ground Transportation’, ‘Accumulated Mileage’.</p>
   <div style="display: flex; justify-content: center;">
-  <img src="C:\Users\apanicke\Desktop\ChromeRiverFAQ\Images\Picture1.png" alt="Action Required Email" style="width: 600px; height: 400px; margin-left: 35px;" border="1">
+  <img src="Images/Picture1.png" alt="Action Required Email" style="width: 600px; height: 400px; margin-left: 35px;" border="1">
 </div>
 </LI>
 <LI>
